--- a/CSS/style.css
+++ b/CSS/style.css
@@ -178,7 +178,7 @@ svg {
 }
 
 .main .home-img .home-momo {
-  background: url('/image/momomo.jpg') no-repeat center center/cover;
+  background: url('image/momomo.jpg') no-repeat center center/cover;
   position: absolute;
   top: 0px;
   left: 0px;
