--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,151 +4,403 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Truculenta:opsz,wght@12..72,100..900&display=swap");
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 50px;
+  background: #121331;
+  box-shadow: inset 20px 20px 60px #0f102a, inset -20px -20px 60px #151638;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #008484;
+  background-image: linear-gradient(180deg, #008484 0%, #005382 100%);
+  border-radius: 7px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #0093e9;
+  background-image: linear-gradient(180deg, #0093e9 0%, #80d0c7 100%);
+}
+
+::selection {
+  color: cyan;
+}
+
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    /* width: 100%;
-    height: auto; 
-    position: relative; */
-    overflow: hidden;
-    background: linear-gradient(to top, #30cfd0 0%, #330867 100%);
-    z-index: -1;
+  background: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+  overflow-x: hidden;
 }
 
-
-
 nav {
-    width: 100%;
-    position: sticky;
-    margin: 0 auto;
-    padding: 15px;
-    z-index: 2;
-    display: flex;
-    align-items: center;
-    background: rgba(255, 255, 255, 0.1);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(20px);
-    -webkit-backdrop-filter: blur(20px);
-    border: 1px solid rgba(255, 255, 255, 0.18);
+  width: 100%;
+  position: sticky;
+  margin: 0 auto;
+  padding: 15px;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .logo {
-    flex-basis: 20%;
-    display: flex;
+  flex-basis: 20%;
+  display: flex;
 }
 
 .logo text {
-    font-family: "Truculenta", sans-serif;
-    font-size: 30px;
-    color: white;
+  font-family: "Truculenta", sans-serif;
+  font-size: 30px;
+  color: white;
 }
 
 #b {
-    height: 15%;
-    width: 15%;
-    padding: 0;
-    margin-left: 20px;
+  height: 15%;
+  width: 15%;
+  padding: 0;
+  margin-left: 20px;
 }
 
 .links {
-    flex: 1;
-    text-align: right;
+  flex: 1;
+  text-align: right;
 }
 
 .links ul li {
-    list-style: none;
-    display: inline-block;
-    margin: 0 20px;
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
 }
 
 .links ul li a {
-    color: white;
-    font-family: "poppins", sans-serif;
-    text-decoration: none;
+  color: white;
+  font-family: "poppins", sans-serif;
+  text-decoration: none;
+}
+
+.links ul li a::after {
+  content: "";
+  width: 0;
+  height: 3px;
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  transform: translate(-50%);
+  background: #fff;
+  transition: width 0.3s;
+}
+
+.links ul li a:hover::after {
+  width: 100%;
+  border-radius: 0px;
 }
 
 .links ul li a .main-cart {
-    display: flex;
+  display: flex;
 }
 
 #i-cart {
-    height: 8%;
-    width: 8%;
-    margin-left: 10px;
-    margin-bottom: -7px;
+  height: 8%;
+  width: 8%;
+  margin-left: 10px;
+  margin-bottom: -7px;
 }
 
 #home {
-    display: flex;
-    flex-direction: column;
-    padding: 3px 200px;
-    height: 578px;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding: 3px 200px;
+  height: 578px;
+  justify-content: center;
+  align-items: center;
 }
 
 #home:before {
-    content: "";
-    background: url('/image/momomo.jpg') no-repeat center center/cover;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    height: 657px;
-    width: 100%;
-    z-index: -1;
-    opacity: 0.7;
+  content: "";
+  background: url("momomomo.jpg") no-repeat center center/cover;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 657px;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.7;
 }
 
 #home h1 {
-    color: white;
-    text-align: center;
-    font-family: "Bree Serif", serif;
+  color: white;
+  text-align: center;
+  font-family: "poppins", sans-serif;
 }
 
 #home p {
-    color: white;
-    text-align: center;
-    font-size: 1.3rem;
-    font-family: "Bree Serif", serif;
+  color: white;
+  text-align: center;
+  font-size: 1.3rem;
+  font-family: "poppins", sans-serif;
 }
 
-.btn {
-    padding: 5px 20px;
-    color: white;
-    border: 2px solid white;
-    background-color: #465d6d;
-    margin: 14px 14px;
-    border-radius: 12px;
-    font-size: 1rem;
-    cursor: pointer;
-}
-
-.info .bg .slogan h1,
-p,
-button {
-    align-items: center;
-    justify-content: center;
-    padding: auto;
-    margin: 3px;
-    animation: appearance 2s 0.5s ease-in;
-    transition: ease-out;
+.info .bg .slogan h1 {
+  align-items: center;
+  justify-content: center;
+  padding: auto;
+  margin: 3px;
+  animation: appearance 1.5s 0.5s ease-in-out;
 }
 
 @keyframes appearance {
-    0% {
-        transform: translateX(-200%);
-        opacity: 0.1;
-        color: black;
-    }
+  0% {
+    transform: translateX(-200%);
+    opacity: 0.1;
+    color: black;
+  }
 
-    100% {
-        transform: translate(0);
+  100% {
+    transform: translate(0);
+  }
+}
+
+.info .bg .slogan p {
+  align-items: center;
+  justify-content: center;
+  padding: auto;
+  margin: 3px;
+  animation: appearance2 1.5s 0.5s ease-in-out;
+}
+
+@keyframes appearance2 {
+  0% {
+    transform: translateX(200%);
+    opacity: 0.1;
+    color: black;
+  }
+
+  100% {
+    transform: translate(0);
+  }
+}
+
+.info .bg .slogan .order-btn {
+  background-image: linear-gradient(120deg, #81659a 0%, #0f365e 100%);
+  box-sizing: border-box;
+  color: white;
+  font-family: "poppins", sans-serif;
+  display: flex;
+  border: 2px solid #fff9;
+  font-size: 1rem;
+  font-weight: 700;
+  justify-content: center;
+  padding: 1rem;
+  position: relative;
+  text-align: center;
+  position: relative;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  border-radius: 15px;
+  touch-action: manipulation;
+  transition: 1s ease;
+}
+
+.order-btn:hover {
+  background-image: linear-gradient(90deg, #8ec5fc 0%, e0c3fc#8ec5fc 100%);
+}
+
+.order-btn:after {
+  content: "";
+  position: absolute;
+  border: 1px solid #ffff;
+  border-radius: 15px;
+  bottom: 0px;
+  left: 0px;
+  width: calc(100%);
+  height: calc(100%);
+  transition: 0.3s ease;
+}
+
+.order-btn:hover:after {
+  bottom: 4px;
+  left: 4px;
+}
+
+@media (min-width: 768px) {
+    .order-btn {
+        padding: 0.75rem 3rem;
+        font-size: 1.25rem;
     }
 }
+#services {
+  margin-top: 73px;
+  padding: 50px;
+  width: 100%;
+  height: 30%;
+  background-image: linear-gradient(to top, #325590  0%, #383b7e  50%, #1a1b31  100%);
+}
+
+#services .serve {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 0;
+  height: auto;
+  justify-content: center;
+}
+
+
+#services .serve .service-main{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#services .serve .deal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 50%;
+  width: 50%;
+}
+
+#services .serve .deal p {
+  font-family: "poppins", sans-serif;
+  font-size: 1.5rem;
+  color: white;
+}
+
+#services .serve .deal img {
+  height: 30%;
+  width: 30%;
+  padding: 10px;
+  transition: 0.5s ease;
+}
+
+#services .serve .deal img:hover{
+    transform: scale(1.05);
+}
+
+#services .serve-head{
+    margin-bottom: 50px;
+    color: white;
+    font-family: "poppins", sans-serif;
+font-size: 2rem;
+}
+
+#services .serve-head h1{
+    text-align: center;
+
+}
+
+.container {
+  margin-top: 5rem;
+  padding: 15px 9%;
+  padding-bottom: 100px;
+  display: block;
+}
+
+.container .heading {
+  text-align: center;
+  padding-bottom: 15px;
+  font-family: "poppins", sans-serif;
+  color: #fff;
+  font-size: 3rem;
+}
+
+.container .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+  gap: 15px;
+}
+
+.container .box-container .box {
+  background: rgba(255, 255, 255, 0);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(0px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  text-align: center;
+  padding: 30px 20px;
+}
+
+.container .box-container .box img {
+  border-radius: 50%;
+  height: 150px;
+}
+
+.container .box-container .box h3 {
+  font-family: "poppins", sans-serif;
+
+  color: #ffff;
+  font-size: 22px;
+  padding: 10px 0;
+}
+
+.container .box-container .box p {
+  font-family: "poppins", sans-serif;
+  color: #ffff;
+  font-size: 15px;
+  line-height: 1.8;
+}
+
+.container .box-container .box .btn {
+  margin-top: 10px;
+  display: inline-block;
+  background: #333;
+  color: #fff;
+  font-size: 17px;
+  border-radius: 5px;
+  padding: 8px 25px;
+  font-family: "poppins", sans-serif;
+  text-decoration: none;
+  transition: 0.75s;
+}
+
+.container .box-container .box .btn:hover {
+  letter-spacing: 1px;
+}
+
+.container .box-container .box:hover {
+  background: rgba(0, 0, 0, 0.05);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(0px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  transform: scale(1.03);
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 20px;
+  }
+}
+
+.reveal {
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: all 1s ease;
+}
+
+.reveal.active {
+  transform: translateY(0);
+  opacity: 1;
+}
+
